# fastapi-rate-limit

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
config/: keydb.conf
fastapi_rate_limit/: main.py
fastapi_rate_limit/workers/: redis_sub_worker.py
tests/: test_keyspace_notifications.py
