[tool.poetry]
name = "fastapi_rate_limit"
version = "0.1.0"
description = ""
authors = ["Vinícius Oliveira <eu@viniciusoliveira.me>"]

[tool.poetry.dependencies]
python = "^3.8"
redis = "^3.5.3"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
